[package]
name = "repl-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
regex = { version = "1.6.0", features = ["pattern"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
walkdir = "2.3.2"
zip-extract = "0.1.1"

[profile.release]
opt-level = 3
lto = true